<resources>
    <string name="app_name">Swami Dairy</string>

    <string name="selectFirstApprover">Select First Approver</string>
    <string name="selectSecondApprover">Select Second Approver</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_bottom_nav">BottomNavActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="fandf_pending"><![CDATA[F & F Pending]]></string>
    <string name="help_feedback"><![CDATA[Help & Feedback]]></string>
    <string name="permission_request_desc"><![CDATA[We request you to allow this app to ignore battery optimizations & run in background, this will allow app to deliver all the necessary services to you without any interruptions.]]></string>

    <string name="cant_communicate_with_server_please_try_again">Can\'t communicate with server, please check your internet connection and try again!</string>
    <string name="something_went_wrong">Something went wrong, please try again!</string>
    <string name="upload_file">Upload File</string>
    <string name="illustration">Illustration</string>
    <string name="close_icon">Close Icon</string>
    <string name="inactive_image">Inactive Image</string>
    <string name="error_image">Error Image</string>
    <string name="back_button">Back Button</string>
    <string name="expand">Expand</string>
    <string name="download_icon">Download Icon</string>
    <string name="copy_icon">Copy Icon</string>
    <string name="rexel_image">Rexel Image</string>
    <string name="background_image">Background Image</string>
    <string name="email">Email</string>
    <string name="edit">Edit</string>
    <string name="image">Image</string>
    <string name="icon">Icon</string>
    <string name="error_illustration">Error Illustration</string>
    <string name="forward_icon">Forward Icon</string>
    <string name="no_notification_illustration">No Notification Illustration</string>
    <string name="profile_image">Profile Image</string>
    <string name="contact">Contact</string>
    <string name="pan_number">PAN Number</string>
    <string name="aadhar_number">Aadhar Number</string>
    <string name="address">Address</string>
    <string name="birth_date">Birth date</string>
    <string name="my_profile">My Profile</string>
    <string name="logout">Logout</string>
    <string name="logout_question">Are you sure you want to logout?</string>
    <string name="gender">Gender</string>
    <string name="blood_group">Blood Group</string>
    <string name="passport_number">Passport Number</string>
    <string name="chip_initial">Chip Initial</string>
    <string name="share_icon">Share Icon</string>
    <string name="action">Action</string>
    <string name="upload_status">Upload Status</string>
    <string name="delete">Delete</string>
    <string name="add_approver_to_cc">Add to Approver One CC</string>
    <string name="password">Password</string>
    <string name="ops">Ops !</string>
    <string name="please_login">Please login!</string>
    <string name="please_login_to_open_any_request_within_app">Please login to open any request within app !</string>
    <string name="go_to_login">Go to login</string>
    <string name="wrong_url">Wrong URL !</string>
    <string name="the_url_brought_you_here_is_invalid_please_use_a_valid_url_and_try_again">The URL brought you here is invalid, please use a valid URL and try again!</string>
    <string name="ok">ok</string>
    <string name="temp_download_req_id">Downloads - Request Id : REQ - 103</string>
    <string name="general_request">General Request</string>
    <string name="request_id">Request ID :</string>
    <string name="date">Date :</string>
    <string name="name">Name :</string>
    <string name="department">Department :</string>
    <string name="description">Description</string>
    <string name="details">Details</string>
    <string name="view_attached_files">View Attached Files</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="message">Message</string>
    <string name="tap_to_select_verifier">Tap to Select Verifier</string>
    <string name="designation">Designation :</string>
    <string name="forward_to_verify">FORWARD TO VERIFY</string>
    <string name="decline_message">Decline Message</string>
    <string name="hide">Hide</string>
    <string name="dash_dash">--</string>
    <string name="request_details">Request Details</string>
    <string name="you_can_upload_multiple_files">You can upload multiple files.</string>
    <string name="uploading_files_please_wait">Uploading files, please wait.</string>
    <string name="retry">Retry</string>
    <string name="generate_request">Generate Request</string>
    <string name="tap_to_select_first_approver">Tap to Select First Approver</string>
    <string name="click_plus_to_add_approver_1_cc">Click + to add Approver 1 CC</string>
    <string name="add_to_approver_one_cc">Add to Approver One CC</string>
    <string name="tap_to_select_second_approver">Tap to Select Second Approver</string>
    <string name="click_plus_to_add_approver_2_cc">Click + to add Approver 2 CC</string>
    <string name="add_approver">Add Approver +</string>
    <string name="log_the_details">Log The Details</string>
    <string name="description_simple">Description</string>
    <string name="approval_workflow">Approval  Workflow</string>
    <string name="login">Login</string>
    <string name="_1">1</string>
    <string name="forward_to_next_approver">Forward To Next Approver</string>
    <string name="forward_to_verify_small_case">Forward To Verify</string>
    <string name="pending">Pending</string>
    <string name="generate">Generate</string>
    <string name="verify">Verify</string>
    <string name="error_occurred_please_try_again">Error occurred, please try again!</string>
    <string name="search">Search..</string>
    <string name="cancel">Cancel</string>
    <string name="add_cc">Add CC</string>
    <string name="permission_request">Permission Request</string>
    <string name="background_services_permission">Background Services Permission</string>
    <string name="forward_request">Forward Request</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="update">Update</string>
    <string name="wait_a_moment">Wait a moment</string>
    <string name="please_wait_a_moment_while_we_prepare_your_request">Please wait a moment while we prepare your request!</string>
    <string name="profile">Profile</string>
    <string name="uploading_profile_picture">Uploading Profile Picture..</string>
    <string name="unable_to_load_profile_please_check_your_internet_connection_and_try_restarting_app">Unable to load profile, please check your internet connection and try restarting app !</string>
    <string name="you_have_no_pending_request">You have no pending request !</string>
    <string name="recheck">Recheck</string>
    <string name="issue_date">Issue Date</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="s">S</string>
    <string name="view_request">View Request</string>
    <string name="performed_action">Performed Action</string>
    <string name="rejection_message">Rejection Message</string>
    <string name="click_plus_to_add_approver_cc">Click + to add Approver CC</string>
    <string name="don_t_have_an_account">Don\'t have an account? </string>
    <string name="sign_up">Sign Up</string>
    <string name="swami_dairy">Swami Dairy</string>
    <string name="swami_dairy_image">Swami Dairy Image</string>
    <string name="submit">Submit</string>
    <string name="feature_not_available_at_this_moment">Seems like this feature is not available at this moment. Please contact your service provider.</string>
    <string name="enter_qty">Enter Quantity:</string>
    <string name="available_quantity">Available Quantity: %1$s</string>
    <string name="place_order">Place Order</string>
    <string name="quantity">Quantity</string>
    <string name="enter_quantity">Enter Quantity</string>
    <string name="verify_order">Verify Order</string>
</resources>
