<?xml version="1.0" encoding="utf-8"?>
<layout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/failedToLoadDataLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ededed"
        android:visibility="gone">

        <ImageView
            android:id="@+id/erro_image"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_centerInParent="true"
            android:contentDescription="@string/error_illustration"
            android:src="@drawable/ic_error_loading_data_image" />

        <TextView
            android:id="@+id/errorTv"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_above="@id/erro_image"
            android:layout_centerInParent="true"
            android:layout_marginBottom="50dp"
            android:gravity="center"
            android:lineSpacingExtra="3dp"
            android:text="@string/error_occurred_please_try_again"
            android:textColor="@color/colorPrimary"
            android:textSize="17sp" />

        <Button
            android:id="@+id/retryButton"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_below="@+id/erro_image"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:background="@drawable/edtxshape_button"
            android:text="@string/retry"
            android:textAllCaps="false"
            android:textColor="@color/white" />

    </RelativeLayout>

</layout>
















