<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".LoginActivity">

        <LinearLayout
            android:id="@+id/mainLinContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:autofillHints=""
                android:inputType="text"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/tv_welcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/open_san_semi_bold"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:text="@string/swami_dairy"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="270dp"
                android:layout_height="150dp"
                android:layout_marginTop="0dp"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="0dp">

                <ImageView
                    android:id="@+id/rexelIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:contentDescription="@string/swami_dairy_image"
                    android:scaleType="fitCenter"
                    android:src="@drawable/swami_icon" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingStart="55dp"
                android:paddingEnd="55sp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInput_fullname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="15dp"
                        android:autofillHints="username"
                        android:drawableStart="@drawable/ic_at_the_rate_icon"
                        android:drawablePadding="8dp"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:paddingStart="8dp"
                        android:paddingEnd="0dp"
                        android:textColorHint="@color/white"
                        android:textSize="15sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    app:endIconMode="password_toggle"
                    app:endIconTint="@color/colorPrimary">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="15dp"
                        android:autofillHints="password"
                        android:drawableStart="@drawable/ic_lock_icon_new"
                        android:drawablePadding="8dp"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:paddingStart="8dp"
                        android:paddingEnd="0dp"
                        android:textColorHint="@color/white"
                        android:textSize="15sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/loginBtn"
                        android:layout_width="210dp"
                        android:layout_height="40dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="7dp"
                        android:background="@drawable/buttonshape_white_circular"
                        android:fontFamily="@font/open_san_semi_bold"
                        android:text="@string/login"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:visibility="visible" />

                </RelativeLayout>

                <ProgressBar
                    android:id="@+id/loading_id"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:visibility="gone" />

            </LinearLayout>

        </LinearLayout>

        <include
            layout="@layout/loading_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <include
            layout="@layout/error_failed_to_load_layout_without_swipe_refresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="17dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_san_semi_bold"
                android:text="@string/don_t_have_an_account"
                android:textColor="@color/colorPrimary" />

            <View
                android:layout_width="5dp"
                android:layout_height="1dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_san_semi_bold"
                android:text="@string/sign_up"
                android:textColor="@color/colorAccent" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
