<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <!-- <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fillViewport="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">-->

    <LinearLayout
        android:id="@+id/mainLinContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:autofillHints=""
            android:inputType="text"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/tv_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/open_san_semi_bold"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:text="Swami Dairy"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="270dp"
            android:layout_height="150dp"
            android:layout_marginTop="0dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="0dp">

            <ImageView
                android:id="@+id/rexelIcon"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:contentDescription="Rexel Image"
                android:scaleType="fitCenter"
                android:src="@drawable/swami_icon" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="55dp"
            android:layout_marginTop="15dp"
            android:paddingEnd="55sp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInput_fullname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/mobNoEdtx"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="15dp"
                        android:drawableStart="@drawable/ic_at_the_rate_icon"
                        android:drawablePadding="8dp"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:paddingStart="8dp"
                        android:textColorHint="@color/white"
                        android:textSize="15sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    app:endIconMode="password_toggle"
                    app:endIconTint="@color/colorPrimary">

                    <EditText
                        android:id="@+id/passwordEdtx"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="15dp"
                        android:drawableStart="@drawable/ic_lock_icon_new"
                        android:drawablePadding="8dp"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:paddingStart="8dp"
                        android:textColorHint="@color/white"
                        android:textSize="15sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/loginBtn"
                        android:layout_width="210dp"
                        android:layout_height="40dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="7dp"
                        android:background="@drawable/buttonshape_white_circular"
                        android:fontFamily="@font/open_san_semi_bold"
                        android:text="@string/login"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:visibility="visible" />

                </RelativeLayout>

                <ProgressBar
                    android:id="@+id/loading_id"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:visibility="gone" />

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

    <include
        layout="@layout/loading_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <include
        layout="@layout/error_failed_to_load_layout_without_swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/open_san_semi_bold"
            android:text="Don't have an account ?  "/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_san_semi_bold"
            android:text="Sign Up"
            android:textColor="@color/colorAccent"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

















































